fixed season size on small screens

--- a/doctorwho/code-assets/css/global.css
+++ b/doctorwho/code-assets/css/global.css
@@ -238,3 +238,12 @@ video{
         height: 210px;
     }
 }
+@media only screen and (max-width: 415px){
+    .show-tile {
+        width: 80%;
+    }
+    .show-tile img {
+        width: 100%;
+        height: auto
+    }
+}
